fix: add flex-direction to rules list to display well on Firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,9 @@ nav {
 #rules-list {
     font-size: 80%;
     height: 50vh;
-    overflow-y: scroll;
+    overflow: scroll;
+    display: flex;
+    flex-direction: vertical;
     scrollbar-width: initial;
 }
 
